files location changed

--- a/register.html
+++ b/register.html
@@ -37,7 +37,7 @@
             </div>
             <div class="end-div">
 
-                <a href="../Login/login.html" class="link-to-login">Already have an account? Log In</a>
+                <a href="./Website/Login/login.html" class="link-to-login">Already have an account? Log In</a>
 
                 <button id="submit-button" class="btn">Submit</button>
             </div>
