--- a/Website/Admin/admin.html
+++ b/Website/Admin/admin.html
@@ -27,7 +27,7 @@
         </table>
 
         <button class="btn name addNewUser">
-            <a href="../register.html">Add New User</a>
+            <a href="../../register.html">Add New User</a>
         </button>
 
         <div id="mainDiv" class="mainDiv hide">
