--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
 <body>
     <section class="main-wrapper">
         <h2 class="title">Register</h2>
-        <form id="register-form" class="register-form" onsubmit="validateForm()">
+        <form id="register-form" class="register-form">
             <div class="row-1">
                 <div class="input-group">
                     <label class="label" for="firstname">First name</label>
