--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Register</title>
     <!-- Main CSS-->
-    <link href="style.css" rel="stylesheet">
+    <link href="register.css" rel="stylesheet">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
             </div>
         </form>
     </section>
-    <script src="app.js"></script>
+    <script src="register.js"></script>
 
 </body>
 
